# Media-Stats-Tracker

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: azure-static-web-apps-ashy-bush-0c3bae503.yml
client/src/: App.js  index.js
client/src/components/App/: App.js
client/src/pages/HomePage/: HomePage.css  HomePage.js
client/src/utils/: setupProxy.js
server/: Cargo.toml
server/src/: main.rs
server/src/routes/: home.rs  mod.rs
